fixing on mobile

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -22866,6 +22866,10 @@ label.btn {
   font-size: 0.875rem;
 }
 
+.font-size-1-5 {
+  font-size: 1.1875rem;
+}
+
 .font-size-2 {
   font-size: 1.5rem;
 }
